--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     depends_on:
       - mongo
     environment:
-      - DJANGO_SETTINGS_MODULE=CodeForU.settings  # Replace with your project's settings module path
+      - DJANGO_SETTINGS_MODULE=CodeForU.CodeForU.settings  # Replace with your project's settings module path
       - DATABASE_URL=mongodb+srv://Admin:Project14@codeforu.d4rianx.mongodb.net/?retryWrites=true&w=majority&appName=CodeForU
 
   mongo:
