--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   web:
-    build: .
+    image: bs-pmc-2024-team14-web:latest
     command: python CodeForU/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
