--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
             steps {
                 script {
                     // Pull the pre-built Docker images
-                    sh 'docker pull bs-pmc-2024-team14-web:latest'
+                    sh 'docker pull mohamadaj/bs-pmc-2024-team14-web:latest'
                     sh 'docker pull mongo:latest'
                 }
             }
@@ -16,7 +16,7 @@ pipeline {
             steps {
                 script {
                     // Run tests using the pulled Docker image for web
-                    sh 'docker run --rm bs-pmc-2024-team14-web:latest python CodeForU/manage.py test'
+                    sh 'docker run --rm mohamadaj/bs-pmc-2024-team14-web:latest python CodeForU/manage.py test'
                 }
             }
         }
