test the jenkins - number8

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,13 +1,29 @@
 pipeline {
     agent any
 
+    environment {
+        DOCKER_IMAGE = 'mohamadaj/bs-pmc-2024-team14-web:latest'
+        REGISTRY = 'docker.io'
+        REGISTRY_CREDENTIALS = 'docker-hub-credentials'  // Jenkins credentials ID for Docker Hub
+        DOCKERFILE_PATH = '../'
+        BUILD_CONTEXT = '../'
+    }
+
     stages {
-        stage('Pull Docker Images') {
+        stage('Clean Up Old Docker Images') {
             steps {
                 script {
-                    // Pull the pre-built Docker images
-                    sh 'docker pull mohamadaj/bs-pmc-2024-team14-web:latest'
-                    sh 'docker pull mongo:latest'
+                    // Clean up old Docker images
+                    sh 'docker rmi -f $(docker images -f "dangling=true" -q) || true'
+                }
+            }
+        }
+
+        stage('Build Docker Image') {
+            steps {
+                script {
+                    // Build Docker image for linux/amd64 platform
+                    sh 'docker buildx build --platform linux/amd64 -t $DOCKER_IMAGE -f $DOCKERFILE_PATH $BUILD_CONTEXT --load'
                 }
             }
         }
@@ -15,17 +31,17 @@ pipeline {
         stage('Run Tests') {
             steps {
                 script {
-                    // Run tests using the pulled Docker image for web
-                    sh 'docker run --rm mohamadaj/bs-pmc-2024-team14-web:latest python CodeForU/manage.py test'
+                    // Run Django tests inside the Docker container with specified platform
+                    sh 'docker run --rm --platform linux/amd64 $DOCKER_IMAGE python manage.py test'
                 }
             }
         }
 
-        stage('Deploy') {
+        stage('Clean Up Docker Containers') {
             steps {
                 script {
-                    // Deploy the application using Docker Compose
-                    sh 'docker-compose -f docker-compose.yml up -d'
+                    // Clean up Docker containers
+                    sh 'docker container prune -f'
                 }
             }
         }
@@ -34,8 +50,8 @@ pipeline {
     post {
         always {
             script {
-                // Cleanup any dangling images
-                sh 'docker image prune -f'
+                // Clean up Docker images after the pipeline run
+                sh 'docker rmi -f $DOCKER_IMAGE || true'
             }
         }
     }
