--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,13 +5,13 @@ pipeline {
         PROJECT_NAME = 'CodeForU'
         DJANGO_IMAGE_NAME = 'mohamadaj/bs-pmc-2024-team14-web:latest'
         DOCKER_COMPOSE_FILE = 'docker-compose.yml'
-        DOCKER_HUB_CREDENTIALS = 'docker-hub-credentials'  // Your Jenkins credentials ID for Docker Hub
+        DOCKER_HUB_CREDENTIALS = 'docker-hub-14'  // Your Jenkins credentials ID for Docker Hub
     }
 
     stages {
         stage('Clone repository') {
             steps {
-                git 'https://github.com/BS-PMC-2024/BS-PMC-2024-Team14.git'
+                git url: 'https://github.com/BS-PMC-2024/BS-PMC-2024-Team14.git', credentialsId: 'github-credentials-14'
             }
         }
 
