--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,41 +2,28 @@ pipeline {
     agent any
 
     environment {
-        PROJECT_NAME = 'CodeForU'
-        DJANGO_IMAGE_NAME = 'mohamadaj/bs-pmc-2024-team14-web:latest'
-        DOCKER_COMPOSE_FILE = 'docker-compose.yml'
-        DOCKER_HUB_CREDENTIALS = 'docker-hub-14'  // Your Jenkins credentials ID for Docker Hub
+        DOCKER_IMAGE = 'mohamadaj/bs-pmc-2024-team14-web'
+        REGISTRY = 'docker.io'
+        REGISTRY_CREDENTIALS = 'docker-hub-14'  // Jenkins credentials ID for Docker Hub
+        DOCKERFILE_PATH = 'dockerfile'
+        BUILD_CONTEXT = '.'
     }
 
     stages {
-        stage('Clone repository') {
+        stage('Clean Up Old Docker Images') {
             steps {
-                git url: 'https://github.com/BS-PMC-2024/BS-PMC-2024-Team14.git', credentialsId: 'github-credentials-14'
+                script {
+                    // Clean up old Docker images
+                    sh 'docker rmi -f $(docker images -f "dangling=true" -q) || true'
+                }
             }
         }
 
         stage('Build Docker Image') {
             steps {
                 script {
-                    // Log in to Docker Hub
-                    withCredentials([usernamePassword(credentialsId: env.DOCKER_HUB_CREDENTIALS, passwordVariable: 'DOCKER_HUB_PASS', usernameVariable: 'DOCKER_HUB_USER')]) {
-                        sh """
-                            echo \$DOCKER_HUB_PASS | docker login -u \$DOCKER_HUB_USER --password-stdin
-                        """
-                    }
-                    // Build and push Django Docker image
-                    sh """
-                        docker build -t ${env.DJANGO_IMAGE_NAME} .
-                        docker push ${env.DJANGO_IMAGE_NAME}
-                    """
-                }
-            }
-        }
-
-        stage('Run Docker Compose') {
-            steps {
-                script {
-                    sh "docker-compose -f ${env.DOCKER_COMPOSE_FILE} up -d"
+                    // Build Docker image for linux/amd64 platform
+                    sh 'docker buildx build --platform linux/amd64 -t $DOCKER_IMAGE -f $DOCKERFILE_PATH $BUILD_CONTEXT --load'
                 }
             }
         }
@@ -44,21 +31,17 @@ pipeline {
         stage('Run Tests') {
             steps {
                 script {
-                    sh "docker-compose -f ${env.DOCKER_COMPOSE_FILE} exec web python CodeForU/manage.py test"
+                    // Run Django tests inside the Docker container with specified platform
+                    sh 'docker run --rm --platform linux/amd64 $DOCKER_IMAGE python manage.py test'
                 }
             }
         }
 
-        stage('Deploy') {
-            when {
-                branch 'main'  // Deploy only when on the main branch
-            }
+        stage('Clean Up Docker Containers') {
             steps {
                 script {
-                    sh """
-                        docker-compose -f ${env.DOCKER_COMPOSE_FILE} pull
-                        docker-compose -f ${env.DOCKER_COMPOSE_FILE} up -d
-                    """
+                    // Clean up Docker containers
+                    sh 'docker container prune -f'
                 }
             }
         }
@@ -67,14 +50,9 @@ pipeline {
     post {
         always {
             script {
-                sh "docker-compose -f ${env.DOCKER_COMPOSE_FILE} down"
+                // Clean up Docker images after the pipeline run
+                sh 'docker rmi -f $DOCKER_IMAGE || true'
             }
-        }
-        success {
-            echo 'Pipeline completed successfully!'
-        }
-        failure {
-            echo 'Pipeline failed.'
         }
     }
 }
